FindOne, Update and Delete OrdemProcedimentos
