# src/modules/ordemServico/dtos/IUpdateOrdemProcedimentoDTO.ts
@@ -1,0 +1,8 @@
+interface IUpdateOrdemProcedimentoDTO {
+    description: string,
+    unit_value: number,
+    amount: number,
+    total_value: number
+}
+
+export { IUpdateOrdemProcedimentoDTO };
